--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
     compile 'net.dean.jraw:JRAW:0.7.1'
+
+    compile 'cn.bmob.android:bmob-sdk:3.4.5'
 }
