--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile 'net.dean.jraw:JRAW:0.7.1'
 
     compile 'cn.bmob.android:bmob-sdk:3.4.5'
+
+    compile 'com.wang.avi:library:1.0.1'
 }
