--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,21 +27,29 @@ android {
 
 repositories {
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
+    compile project(":imgur_models")
+    compile project(":imgur_api2")
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:design:23.1.0'
-    compile 'com.android.support:support-v4:23.1.0'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
     compile 'net.dean.jraw:JRAW:0.7.1'
 
     compile 'cn.bmob.android:bmob-sdk:3.4.5'
 
     compile 'com.wang.avi:library:1.0.1'
 
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile "com.squareup.retrofit:converter-jackson:2.0.0-beta2"
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
 }
