--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
 
     compile 'com.wang.avi:library:1.0.1'
 
+    compile 'com.jakewharton:butterknife:7.0.1'
+
     compile "com.squareup.retrofit:converter-jackson:2.0.0-beta2"
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
